⏪️ Rename Validate to Annotate

--- a/docs/annotate.ipynb
+++ b/docs/annotate.ipynb
@@ -5,7 +5,7 @@
    "id": "1d2cd769",
    "metadata": {},
    "source": [
-    "# Validate & standardize\n",
+    "# Annotate\n",
     "\n",
     "This guide shows how to define clear validation criteria, validate and curate metadata within a few minutes.\n",
     "\n",
@@ -52,7 +52,7 @@
    },
    "outputs": [],
    "source": [
-    "!lamin init --storage ./test-validator --schema bionty"
+    "!lamin init --storage ./test-annotate --schema bionty"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator = ln.Validate.from_df(df, fields=fields)"
+    "annotate = ln.Annotate.from_df(df, fields=fields)"
    ]
   },
   {
@@ -156,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = validator.validate()"
+    "validated = annotate.validate()"
    ]
   },
   {
@@ -191,12 +191,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator = ln.Validate.from_df(\n",
+    "annotate = ln.Annotate.from_df(\n",
     "    df, \n",
     "    fields=fields, \n",
     "    using=\"laminlabs/cellxgene\",  # pass the instance slug\n",
     "    )\n",
-    "validator.validate()"
+    "annotate.validate()"
    ]
   },
   {
@@ -218,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator.update_registry(\"cell_type\")"
+    "annotate.update_registry(\"cell_type\")"
    ]
   },
   {
@@ -238,7 +238,7 @@
    "source": [
     "# use a lookup object to get the correct spelling of categories from public reference\n",
     "# pass \"public\" to use the public reference\n",
-    "lookup = validator.lookup()"
+    "lookup = annotate.lookup()"
    ]
   },
   {
@@ -281,7 +281,7 @@
     "# fix the typo\n",
     "df[\"cell_type\"] = df[\"cell_type\"].replace({\"cerebral pyramidal neuron\": cell_types.cerebral_cortex_pyramidal_neuron.name})\n",
     "\n",
-    "validator.update_registry(\"cell_type\")"
+    "annotate.update_registry(\"cell_type\")"
    ]
   },
   {
@@ -291,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator.update_registry(\"donor\")"
+    "annotate.update_registry(\"donor\")"
    ]
   },
   {
@@ -309,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator.update_registry(\"donor\", validated_only=False)"
+    "annotate.update_registry(\"donor\", validated_only=False)"
    ]
   },
   {
@@ -327,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = validator.validate()"
+    "validated = annotate.validate()"
    ]
   },
   {
@@ -347,7 +347,7 @@
    "source": [
     "## Validate an AnnData object\n",
     "\n",
-    "We offer an AnnData specific validator that is aware of the variables in addition to the observations DataFrame.\n",
+    "We offer an AnnData specific annotate that is aware of the variables in addition to the observations DataFrame.\n",
     "\n",
     "Here we specify which `var_fields` and `obs_fields` to validate against."
    ]
@@ -374,7 +374,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator = ln.Validate.from_anndata(\n",
+    "annotate = ln.Annotate.from_anndata(\n",
     "    adata, \n",
     "    obs_fields=fields, \n",
     "    var_field=bt.Gene.symbol, # specify the field for the var\n",
@@ -389,7 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator.validate()"
+    "annotate.validate()"
    ]
   },
   {
@@ -399,7 +399,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator.update_registry(\"all\")"
+    "annotate.update_registry(\"all\")"
    ]
   },
   {
@@ -409,7 +409,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validator.validate()"
+    "annotate.validate()"
    ]
   },
   {
@@ -447,7 +447,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact = validator.register_artifact(description=\"test AnnData\")"
+    "artifact = annotate.register_artifact(description=\"test AnnData\")"
    ]
   },
   {
@@ -492,7 +492,7 @@
    "outputs": [],
    "source": [
     "# register a new collection\n",
-    "collection = validator.register_collection(\n",
+    "collection = annotate.register_collection(\n",
     "    artifact,  # registered artifact above, can also pass a list of artifacts\n",
     "    name=\"Experiment X in brain\",  # title of the publication\n",
     "    description=\"10.1126/science.xxxxx\",  # DOI of the publication\n",
