--- a/docs/annotate.ipynb
+++ b/docs/annotate.ipynb
@@ -5,9 +5,9 @@
    "id": "1d2cd769",
    "metadata": {},
    "source": [
-    "# Annotate\n",
+    "# Annotate data\n",
     "\n",
-    "This guide shows how to define clear validation criteria, validate and curate metadata within a few minutes.\n",
+    "This guide shows how to annotate data, including defining clear validation criteria, validating & curating metadata, registering annotated artifacts, within a few minutes.\n",
     "\n",
     "By the end, you'll have validated data objects empowered by LaminDB registries.\n",
     "\n",
