--- a/docs/facs4.ipynb
+++ b/docs/facs4.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "![facs4/4](https://img.shields.io/badge/facs4/4-lightgrey)\n",
     "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/facs3.ipynb)\n",
-    "[![lamindata](https://img.shields.io/badge/Source%20%26%20report%20on%20LaminHub-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/record/core/Transform?uid=zzJzdgJ763Dyz8)"
+    "[![lamindata](https://img.shields.io/badge/Source%20%26%20report%20on%20LaminHub-mediumseagreen)](https://lamin.ai/laminlabs/transform/zzJzdgJ763Dyz8)"
    ]
   },
   {
