💚 Fix transforms settings

--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -155,8 +155,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.transform.stem_uid = \"eNef4Arw8nNM\"\n",
-    "ln.transform.version = \"0\"\n",
+    "ln.settings.transform.stem_uid = \"eNef4Arw8nNM\"\n",
+    "ln.settings.transform.version = \"0\"\n",
     "ln.track()"
    ]
   },
