--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -57,8 +57,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.transform.stem_uid = \"hsPU1OENv0LS\"\n",
-    "ln.transform.version = \"0\"\n",
+    "ln.settings.transform.stem_uid = \"hsPU1OENv0LS\"\n",
+    "ln.settings.transform.version = \"0\"\n",
     "ln.track()"
    ]
   },
