--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -122,8 +122,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.transform.stem_uid = \"s5V0dNMVwL9i\"\n",
-    "ln.transform.version = \"0\"\n",
+    "ln.settings.transform.stem_uid = \"s5V0dNMVwL9i\"\n",
+    "ln.settings.transform.version = \"0\"\n",
     "ln.track()"
    ]
   },
