--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -32,8 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.transform.stem_uid = \"wukchS8V976U\"\n",
-    "ln.transform.version = \"0\"\n",
+    "ln.settings.transform.stem_uid = \"wukchS8V976U\"\n",
+    "ln.settings.transform.version = \"0\"\n",
     "ln.track()"
    ]
   },
