--- a/docs/facs4.ipynb
+++ b/docs/facs4.ipynb
@@ -25,8 +25,8 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.transform.stem_uid = \"zzJzdgJ763Dy\"\n",
-    "ln.transform.version = \"0\"\n",
+    "ln.settings.transform.stem_uid = \"zzJzdgJ763Dy\"\n",
+    "ln.settings.transform.version = \"0\"\n",
     "ln.track()"
    ]
   },
