--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -68,8 +68,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.transform.stem_uid = \"yMWSFirS6qv2\"\n",
-    "ln.transform.version = \"0\"\n",
+    "ln.settings.transform.stem_uid = \"yMWSFirS6qv2\"\n",
+    "ln.settings.transform.version = \"0\"\n",
     "ln.track()"
    ]
   },
