--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -400,8 +400,8 @@
    "outputs": [],
    "source": [
     "# track the current notebook as transform\n",
-    "ln.transform.stem_uid = \"1LCd8kco9lZU\"\n",
-    "ln.transform.version = \"0\"\n",
+    "ln.settings.transform.stem_uid = \"1LCd8kco9lZU\"\n",
+    "ln.settings.transform.version = \"0\"\n",
     "ln.track()"
    ]
   },
