--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -67,8 +67,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.transform.stem_uid = \"daeFs3PkquDW\"\n",
-    "ln.transform.version = \"draft\"\n",
+    "ln.settings.transform.stem_uid = \"daeFs3PkquDW\"\n",
+    "ln.settings.transform.version = \"draft\"\n",
     "ln.track()"
    ]
   },
