--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -87,8 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.transform.stem_uid = \"OWuTtS4SApon\"\n",
-    "ln.transform.version = \"0\"\n",
+    "ln.settings.transform.stem_uid = \"OWuTtS4SApon\"\n",
+    "ln.settings.transform.version = \"0\"\n",
     "ln.track()"
    ]
   },
