--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -44,8 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.transform.stem_uid = \"SmQmhrhigFPL\"\n",
-    "ln.transform.version = \"0\"\n",
+    "ln.settings.transform.stem_uid = \"SmQmhrhigFPL\"\n",
+    "ln.settings.transform.version = \"0\"\n",
     "ln.track()"
    ]
   },
