--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -11,11 +11,10 @@
     "Here, we demonstrate how to standardize the metadata on-the-fly during cell type annotation and pathway enrichment analysis using these two registries.\n",
     "\n",
     "For more information, see:\n",
-    "- [Access public ontologies](docs:public-ontologies)\n",
-    "- [Manage biological registries](docs:bio-registries)\n",
-    "- [Annotate data](docs:annotate)\n",
-    "- [Validate & standardize](docs:validate)\n",
-    "- [Validate & register scRNA-seq datasets](docs:scrna)"
+    "- {doc}`docs:public-ontologies`\n",
+    "- {doc}`docs:bio-registries`\n",
+    "- {doc}`docs:annotate`\n",
+    "- {doc}`docs:scrna`"
    ]
   },
   {
