--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -401,7 +401,7 @@
    "outputs": [],
    "source": [
     "collection_v2 = ln.Collection(\n",
-    "    [artifact, collection_v1.artifact], is_new_version_of=collection_v1, version=\"2\"\n",
+    "    [artifact, collection_v1.artifacts[0]], is_new_version_of=collection_v1, version=\"2\"\n",
     ")"
    ]
   },
