--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -18,18 +18,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{warning}\n",
+    ":::{note}\n",
     "\n",
-    "This is, for now, just a stub.\n",
+    "Please see: \n",
     "\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setup"
+    "- {doc}`docs:vitessce`\n",
+    "- {doc}`docs:rxrx`\n",
+    "\n",
+    "This page is for now just a stub.\n",
+    "\n",
+    ":::"
    ]
   },
   {
