--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -84,14 +84,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's use a MuData object:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Transform ![](https://img.shields.io/badge/Transform-10b981)"
+    "Let's use a MuData object.\n",
+    "\n",
+    "MuData objects build on top of AnnData objects to store and serialize multimodal data.\n",
+    "More information can be found on the [MuData documentation](https://mudata.readthedocs.io/en/latest/)."
    ]
   },
   {
@@ -99,64 +95,38 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "hide-cell",
+     "hide-output"
     ]
    },
    "outputs": [],
    "source": [
-    "mdata = ln.core.datasets.mudata_papalexi21_subset()\n",
+    "mdata = ln.core.datasets.mudata_papalexi21_subset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "mdata"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "MuData objects build on top of AnnData objects to store and serialize multimodal data.\n",
-    "More information can be found on the [MuData documentation](https://mudata.readthedocs.io/en/latest/)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First we register the artifact:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact = ln.Artifact(\n",
-    "    \"papalexi21_subset.h5mu\", description=\"Sub-sampled MuData from Papalexi21\"\n",
-    ")\n",
-    "artifact.save()"
+    "mdata.obs"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's validate and register the 3 feature sets this data contains:\n",
-    "1. RNA (gene expression)\n",
-    "2. ADT (antibody derived tags reflecting surface proteins)\n",
-    "3. obs (metadata)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For the two modalities rna and adt, we use bionty tables as the reference:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Validate ![](https://img.shields.io/badge/Validate-10b981)"
+    "## Standardize and validate metadata "
    ]
   },
   {
@@ -165,73 +135,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdata[\"rna\"].var_names[:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bt.Gene.validate(mdata[\"rna\"].var_names, bt.Gene.symbol);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "genes = bt.Gene.from_values(mdata[\"rna\"].var_names, bt.Gene.symbol)\n",
-    "ln.save(genes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mdata[\"rna\"].var_names = bt.Gene.standardize(mdata[\"rna\"].var_names, bt.Gene.symbol)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "validated = bt.Gene.validate(mdata[\"rna\"].var_names, bt.Gene.symbol)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_genes = [bt.Gene(symbol=symbol) for symbol in mdata[\"rna\"].var_names[~validated]]\n",
-    "ln.save(new_genes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bt.Gene.validate(mdata[\"rna\"].var_names, bt.Gene.symbol);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "feature_set_rna = ln.FeatureSet.from_values(\n",
-    "    mdata[\"rna\"].var_names, field=bt.Gene.symbol\n",
+    "annotate = ln.Annotate.from_mudata(\n",
+    "    mdata,\n",
+    "    var_index={\n",
+    "        \"rna\": bt.Gene.symbol, # gene expression\n",
+    "        \"adt\": bt.CellMarker.name, # antibody derived tags reflecting surface proteins\n",
+    "        \"hto\": ln.Feature.name, # cell hashing\n",
+    "        \"gdo\": ln.Feature.name, # guide RNAs\n",
+    "    },\n",
+    "    categoricals={\n",
+    "        \"perturbation\": ln.ULabel.name, \"replicate\": ln.ULabel.name, # shared categoricals\n",
+    "        \"hto:technique\": bt.ExperimentalFactor.name # note this is a modality specific categorical\n",
+    "    }\n",
     ")"
    ]
   },
@@ -241,7 +156,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdata[\"adt\"].var_names"
+    "# add new gene symbols from the ['rna'].var.index\n",
+    "annotate.add_new_from_var_index(\"rna\")\n",
+    "# add new categories from the hto and gdo var.index\n",
+    "annotate.add_new_from_var_index(\"hto\")\n",
+    "annotate.add_new_from_var_index(\"gdo\")"
    ]
   },
   {
@@ -250,7 +169,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bt.CellMarker.validate(mdata[\"adt\"].var_names);"
+    "# optional: register additional columns we'd like to annotate\n",
+    "annotate.add_new_from_columns(modality=\"rna\")\n",
+    "annotate.add_new_from_columns(modality=\"adt\")\n",
+    "annotate.add_new_from_columns(modality=\"hto\")\n",
+    "annotate.add_new_from_columns(modality=\"gdo\")"
    ]
   },
   {
@@ -259,8 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "markers = bt.CellMarker.from_values(mdata[\"adt\"].var_names)\n",
-    "ln.save(markers)"
+    "annotate.validate()"
    ]
   },
   {
@@ -269,14 +191,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bt.CellMarker.validate(mdata[\"adt\"].var_names);"
+    "# add validated and new categories\n",
+    "annotate.add_new_from(\"perturbation\")\n",
+    "annotate.add_new_from(\"replicate\")\n",
+    "annotate.add_validated_from(\"technique\", modality=\"hto\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annotate.validate()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Register ![](https://img.shields.io/badge/Register-10b981) "
+    "## Register and annotate artifact"
    ]
   },
   {
@@ -285,144 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_set_adt = ln.FeatureSet.from_values(\n",
-    "    mdata[\"adt\"].var_names, field=bt.CellMarker.name\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Link them to artifact:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "artifact.features._add_feature_set(feature_set_rna, slot=\"rna\")\n",
-    "artifact.features._add_feature_set(feature_set_adt, slot=\"adt\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The 3rd feature set is the obs:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "obs = mdata[\"rna\"].obs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We're only interested in a single metadata column:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.Feature(name=\"gene_target\", type=\"category\").save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features = ln.Feature.from_df(obs)\n",
-    "ln.save(features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "feature_set_obs = ln.FeatureSet.from_df(obs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "artifact.features._add_feature_set(feature_set_obs, slot=\"obs\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gene_targets = bt.Gene.from_values(obs[\"gene_target\"], bt.Gene.symbol)\n",
-    "ln.save(gene_targets)\n",
-    "features = ln.Feature.lookup()\n",
-    "artifact.labels.add(gene_targets, feature=features.gene_target)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nt = ln.ULabel(name=\"NT\", description=\"Non-targeting control of perturbations\")\n",
-    "nt.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "artifact.labels.add(nt, feature=features.gene_target)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for col in [\"orig.ident\", \"perturbation\", \"replicate\", \"Phase\", \"guide_ID\"]:\n",
-    "    labels = [ln.ULabel(name=name) for name in obs[col].unique()]\n",
-    "    ln.save(labels)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Because none of these labels seem like something we'd want to track in the registry or validate, we don't link them to the artifact."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "artifact.features"
+    "artifact = annotate.save_artifact(description=\"Sub-sampled MuData from Papalexi21\")"
    ]
   },
   {
