--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -13,14 +13,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Append a new shard of data"
+    "# Append a new dataset"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have one artifact in storage and are about to receive a new shard of data.\n",
+    "We have one dataset in storage and are about to receive a new dataset.\n",
     "\n",
     "In this notebook, we'll see how to manage the situation."
    ]
