--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You'll learn how to manage a growing number of flow cytometry data shards as a single queryable collection."
+    "You'll learn how to manage a growing number of flow cytometry datasets as a single queryable collection."
    ]
   },
   {
@@ -32,7 +32,7 @@
     "Specifically, you will\n",
     "\n",
     "1. read a single `.fcs` file as an `AnnData` and seed a versioned collection with it (![facs1/4](https://img.shields.io/badge/facs1/4-lightgrey), current page)\n",
-    "2. append a new data shard (a new `.fcs` file) to create a new version of the collection ([![facs2/4](https://img.shields.io/badge/facs2/4-lightgrey)](facs2))\n",
+    "2. append a new dataset (a new `.fcs` file) to create a new version of the collection ([![facs2/4](https://img.shields.io/badge/facs2/4-lightgrey)](facs2))\n",
     "3. query individual files and cell markers ([![facs3/4](https://img.shields.io/badge/facs3/4-lightgrey)](facs3))\n",
     "4. analyze the collection and store results as plots ([![facs4/4](https://img.shields.io/badge/facs4/4-lightgrey)](facs4))\n",
     "\n",
