--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -19,20 +19,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{warning}\n",
+    "Here, we'll showcase how to curate and register ECCITE-seq data from [Papalexi21](https://www.nature.com/articles/s41592-019-0392-0) in the form of [MuData](https://github.com/scverse/mudata) objects.\n",
     "\n",
-    "This is, for now, just a stub.\n",
+    "ECCITE-seq is designed to enable interrogation of single-cell transcriptomes together with surface protein markers in the context of CRISPR screens.\n",
     "\n",
-    "```\n",
-    "\n",
-    "Here, we'll showcase how to curate and register ECCITE-seq data from [Papalexi21](https://www.nature.com/articles/s41592-019-0392-0) in the form of [MuData](https://github.com/scverse/mudata) objects. ECCITE-seq is designed to enable interrogation of single-cell transcriptomes together with surface protein markers in the context of CRISPR screens.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setup"
+    "[MuData objects](https://mudata.readthedocs.io) build on top of AnnData objects to store multimodal data.\n"
    ]
   },
   {
@@ -57,59 +48,18 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import bionty as bt\n",
-    "\n",
-    "bt.settings.organism = \"human\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.settings.transform.stem_uid = \"yMWSFirS6qv2\"\n",
-    "ln.settings.transform.version = \"0\"\n",
-    "ln.track()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Papalexi21"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's use a MuData object.\n",
-    "\n",
-    "MuData objects build on top of AnnData objects to store and serialize multimodal data.\n",
-    "More information can be found on the [MuData documentation](https://mudata.readthedocs.io/en/latest/)."
+    "import bionty as bt"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-cell",
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
-    "mdata = ln.core.datasets.mudata_papalexi21_subset()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "mdata = ln.core.datasets.mudata_papalexi21_subset()\n",
     "mdata"
    ]
   },
@@ -119,22 +69,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdata.obs"
+    "mdata.obs.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Standardize and validate metadata "
+    "## Validate annotations "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
+    "bt.settings.organism = \"human\"\n",
     "annotate = ln.Annotate.from_mudata(\n",
     "    mdata,\n",
     "    var_index={\n",
@@ -144,31 +99,30 @@
     "        \"gdo\": ln.Feature.name, # guide RNAs\n",
     "    },\n",
     "    categoricals={\n",
-    "        \"perturbation\": ln.ULabel.name, \"replicate\": ln.ULabel.name, # shared categoricals\n",
+    "        \"perturbation\": ln.ULabel.name,  # shared categorical\n",
+    "        \"replicate\": ln.ULabel.name, # shared categorical\n",
     "        \"hto:technique\": bt.ExperimentalFactor.name # note this is a modality specific categorical\n",
-    "    }\n",
+    "    },\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# add new gene symbols from the ['rna'].var.index\n",
     "annotate.add_new_from_var_index(\"rna\")\n",
+    "\n",
     "# add new categories from the hto and gdo var.index\n",
     "annotate.add_new_from_var_index(\"hto\")\n",
-    "annotate.add_new_from_var_index(\"gdo\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "annotate.add_new_from_var_index(\"gdo\")\n",
+    "\n",
     "# optional: register additional columns we'd like to annotate\n",
     "annotate.add_new_from_columns(modality=\"rna\")\n",
     "annotate.add_new_from_columns(modality=\"adt\")\n",
@@ -179,7 +133,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "annotate.validate()"
@@ -188,7 +146,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# add validated and new categories\n",
@@ -200,7 +162,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "annotate.validate()"
@@ -210,13 +176,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register and annotate artifact"
+    "## Register annotated artifact"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "artifact = annotate.save_artifact(description=\"Sub-sampled MuData from Papalexi21\")"
@@ -229,15 +199,6 @@
    "outputs": [],
    "source": [
     "artifact.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "artifact.view_lineage()"
    ]
   },
   {
