🎨 Do not set organism globally

--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -64,15 +64,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mdata.obs.head()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -89,7 +80,6 @@
    },
    "outputs": [],
    "source": [
-    "bt.settings.organism = \"human\"\n",
     "annotate = ln.Annotate.from_mudata(\n",
     "    mdata,\n",
     "    var_index={\n",
@@ -103,6 +93,7 @@
     "        \"replicate\": ln.ULabel.name, # shared categorical\n",
     "        \"hto:technique\": bt.ExperimentalFactor.name # note this is a modality specific categorical\n",
     "    },\n",
+    "    organism=\"human\",\n",
     ")"
    ]
   },
