--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -281,7 +281,7 @@
     "    ln.track(transform=transform)\n",
     "    # access uploaded files as inputs for the pipeline\n",
     "    input_artifacts = ln.Artifact.filter(key__startswith=\"fastq/perturbseq\").all()\n",
-    "    input_paths = [artifact.stage() for artifact in input_artifacts]\n",
+    "    input_paths = [artifact.cache() for artifact in input_artifacts]\n",
     "    # register output files\n",
     "    output_artifacts = ln.Artifact.from_dir(\n",
     "        \"./mydata/perturbseq/filtered_feature_bc_matrix/\"\n",
@@ -293,7 +293,7 @@
     "        name=\"Postprocess Cell Ranger\", version=\"2.0\", type=\"pipeline\"\n",
     "    )\n",
     "    ln.track(transform=transform)\n",
-    "    input_artifacts = [f.stage() for f in output_artifacts]\n",
+    "    input_artifacts = [f.cache() for f in output_artifacts]\n",
     "    output_path = ln.core.datasets.schmidt22_perturbseq(basedir=ln.settings.storage)\n",
     "    output_file = ln.Artifact(output_path, description=\"perturbseq counts\")\n",
     "    output_file.save()\n",
@@ -416,7 +416,7 @@
    "outputs": [],
    "source": [
     "artifact = ln.Artifact.filter(key__contains=\"figures/matrixplot\").one()\n",
-    "artifact.stage()"
+    "artifact.cache()"
    ]
   },
   {
