--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -132,9 +132,9 @@
    "source": [
     "# This function mimics the upload of artifacts via the UI\n",
     "# In reality, you simply drag and drop files into the UI\n",
-    "def run_upload_crispra_result_app():\n",
+    "def mock_upload_crispra_result_app():\n",
     "    ln.setup.login(\"testuser1\")\n",
-    "    transform = ln.Transform(name=\"Upload GWS CRISPRa result\", type=\"app\")\n",
+    "    transform = ln.Transform(name=\"Upload GWS CRISPRa result\", type=\"upload\")\n",
     "    ln.track(transform=transform)\n",
     "    output_path = ln.core.datasets.schmidt22_crispra_gws_IFNG(ln.settings.storage)\n",
     "    output_file = ln.Artifact(\n",
@@ -142,8 +142,7 @@
     "    )\n",
     "    output_file.save()\n",
     "\n",
-    "\n",
-    "run_upload_crispra_result_app()"
+    "mock_upload_crispra_result_app()"
    ]
   },
   {
@@ -170,26 +169,28 @@
    },
    "outputs": [],
    "source": [
-    "def run_hit_identification_notebook():\n",
+    "def mock_hit_identification_notebook():\n",
     "    # log in as another user\n",
     "    ln.setup.login(\"testuser2\")\n",
     "\n",
-    "    # create a new transform to mimic a new notebook (in reality you just run ln.track() in a notebook)\n",
+    "    # create a new transform to mimic a new notebook\n",
+    "    # (in reality you just run ln.track() in a notebook and you don't have to manage runs)\n",
     "    transform = ln.Transform(name=\"GWS CRIPSRa analysis\", type=\"notebook\")\n",
-    "    ln.track(transform=transform)\n",
+    "    transform.save()\n",
+    "    run = ln.Run(transform=transform)\n",
+    "    run.save()\n",
     "\n",
     "    # access the upload artifact\n",
     "    input_file = ln.Artifact.filter(key=\"schmidt22-crispra-gws-IFNG.csv\").one()\n",
     "\n",
     "    # identify hits\n",
-    "    input_df = input_file.load().set_index(\"id\")\n",
+    "    input_df = input_file.load(is_run_input=run).set_index(\"id\")\n",
     "    output_df = input_df[input_df[\"pos|fdr\"] < 0.01].copy()\n",
     "\n",
     "    # register hits in output artifact\n",
-    "    ln.Artifact(output_df, description=\"hits from schmidt22 crispra GWS\").save()\n",
+    "    ln.Artifact.from_df(output_df, description=\"hits from schmidt22 crispra GWS\", run=run).save()\n",
     "\n",
-    "\n",
-    "run_hit_identification_notebook()"
+    "mock_hit_identification_notebook()"
    ]
   },
   {
@@ -233,7 +234,7 @@
    },
    "outputs": [],
    "source": [
-    "def run_upload_from_sequencer_pipeline():\n",
+    "def mock_upload_from_sequencer_pipeline():\n",
     "    ln.setup.login(\"testuser1\")\n",
     "\n",
     "    # create a pipeline transform\n",
@@ -245,8 +246,7 @@
     "    ln.Artifact(upload_dir.parent / \"fastq/perturbseq_R1_001.fastq.gz\").save()\n",
     "    ln.Artifact(upload_dir.parent / \"fastq/perturbseq_R2_001.fastq.gz\").save()\n",
     "\n",
-    "\n",
-    "run_upload_from_sequencer_pipeline()"
+    "mock_upload_from_sequencer_pipeline()"
    ]
   },
   {
@@ -275,7 +275,7 @@
    },
    "outputs": [],
    "source": [
-    "def run_scrna_analysis_pipeline():\n",
+    "def mock_scrna_analysis_pipeline():\n",
     "    ln.setup.login(\"testuser2\")\n",
     "    transform = ln.Transform(name=\"Cell Ranger\", version=\"7.2.0\", type=\"pipeline\")\n",
     "    ln.track(transform=transform)\n",
@@ -299,7 +299,7 @@
     "    output_file.save()\n",
     "\n",
     "\n",
-    "run_scrna_analysis_pipeline()"
+    "mock_scrna_analysis_pipeline()"
    ]
   },
   {
@@ -343,7 +343,7 @@
    },
    "outputs": [],
    "source": [
-    "def run_integrated_analysis_notebook():\n",
+    "def mock_integrated_analysis_notebook():\n",
     "    import scanpy as sc\n",
     "\n",
     "    # create a new transform to mimic a new notebook (in reality you just run ln.track() in a notebook)\n",
@@ -351,31 +351,32 @@
     "        name=\"Perform single cell analysis, integrate with CRISPRa screen\",\n",
     "        type=\"notebook\",\n",
     "    )\n",
-    "    ln.track(transform=transform)\n",
+    "    transform.save()\n",
+    "    run = ln.Run(transform=transform)\n",
+    "    run.save()\n",
     "\n",
     "    # access the output files of bfx pipeline and previous analysis\n",
     "    file_ps = ln.Artifact.filter(description__icontains=\"perturbseq\").one()\n",
-    "    adata = file_ps.load()\n",
+    "    adata = file_ps.load(is_run_input=run)\n",
     "    file_hits = ln.Artifact.filter(description=\"hits from schmidt22 crispra GWS\").one()\n",
-    "    screen_hits = file_hits.load()\n",
+    "    screen_hits = file_hits.load(is_run_input=run)\n",
     "\n",
     "    # perform analysis and register output plot files\n",
     "    sc.tl.score_genes(adata, adata.var_names.intersection(screen_hits.index).tolist())\n",
     "    filesuffix = \"_fig1_score-wgs-hits.png\"\n",
     "    sc.pl.umap(adata, color=\"score\", show=False, save=filesuffix)\n",
     "    filepath = f\"figures/umap{filesuffix}\"\n",
-    "    artifact = ln.Artifact(filepath, key=filepath)\n",
+    "    artifact = ln.Artifact(filepath, key=filepath, run=run)\n",
     "    artifact.save()\n",
     "    filesuffix = \"fig2_score-wgs-hits-per-cluster.png\"\n",
     "    sc.pl.matrixplot(\n",
     "        adata, groupby=\"cluster_name\", var_names=[\"score\"], show=False, save=filesuffix\n",
     "    )\n",
     "    filepath = f\"figures/matrixplot_{filesuffix}\"\n",
-    "    artifact = ln.Artifact(filepath, key=filepath)\n",
+    "    artifact = ln.Artifact(filepath, key=filepath, run=run)\n",
     "    artifact.save()\n",
     "\n",
-    "\n",
-    "run_integrated_analysis_notebook()"
+    "mock_integrated_analysis_notebook()"
    ]
   },
   {
@@ -627,7 +628,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Transform.filter(created_by=users.testuser2).df()"
+    "ln.Transform.filter(created_by=users.testuser1).df()"
    ]
   },
   {
@@ -644,7 +645,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Transform.filter(created_by=users.testuser2, type=\"notebook\").df()"
+    "ln.Transform.filter(created_by=users.testuser1, type=\"notebook\").df()"
    ]
   },
   {
