♻️ Refactor project flow

--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -169,6 +169,8 @@
    },
    "outputs": [],
    "source": [
+    "# This function mimics the hit identification notebook\n",
+    "# In reality, you would run this in a notebook titled \"GWS CRIPSRa analysis\"\n",
     "def mock_hit_identification_notebook():\n",
     "    # log in as another user\n",
     "    ln.setup.login(\"testuser2\")\n",
@@ -227,6 +229,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python project-flow-scripts/chromium_10x_upload.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": [
      "hide-output"
@@ -234,19 +245,19 @@
    },
    "outputs": [],
    "source": [
-    "def mock_upload_from_sequencer_pipeline():\n",
-    "    ln.setup.login(\"testuser1\")\n",
+    "# def mock_upload_from_sequencer_pipeline():\n",
+    "#     ln.setup.login(\"testuser1\")\n",
     "\n",
-    "    # create a pipeline transform\n",
-    "    ln.track(transform=ln.Transform(name=\"Chromium 10x upload\", type=\"pipeline\"))\n",
-    "    # register output files of the sequencer\n",
-    "    upload_dir = ln.core.datasets.dir_scrnaseq_cellranger(\n",
-    "        \"perturbseq\", basedir=ln.settings.storage, output_only=False\n",
-    "    )\n",
-    "    ln.Artifact(upload_dir.parent / \"fastq/perturbseq_R1_001.fastq.gz\").save()\n",
-    "    ln.Artifact(upload_dir.parent / \"fastq/perturbseq_R2_001.fastq.gz\").save()\n",
+    "#     # create a pipeline transform\n",
+    "#     ln.track(transform=ln.Transform(name=\"Chromium 10x upload\", type=\"pipeline\"))\n",
+    "#     # register output files of the sequencer\n",
+    "#     upload_dir = ln.core.datasets.dir_scrnaseq_cellranger(\n",
+    "#         \"perturbseq\", basedir=ln.settings.storage, output_only=False\n",
+    "#     )\n",
+    "#     ln.Artifact(upload_dir.parent / \"fastq/perturbseq_R1_001.fastq.gz\").save()\n",
+    "#     ln.Artifact(upload_dir.parent / \"fastq/perturbseq_R2_001.fastq.gz\").save()\n",
     "\n",
-    "mock_upload_from_sequencer_pipeline()"
+    "# mock_upload_from_sequencer_pipeline()"
    ]
   },
   {
@@ -268,6 +279,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python project-flow-scripts/register_cellranger_io.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python project-flow-scripts/postprocess_cellranger.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": [
      "hide-output"
@@ -275,31 +304,31 @@
    },
    "outputs": [],
    "source": [
-    "def mock_scrna_analysis_pipeline():\n",
-    "    ln.setup.login(\"testuser2\")\n",
-    "    transform = ln.Transform(name=\"Cell Ranger\", version=\"7.2.0\", type=\"pipeline\")\n",
-    "    ln.track(transform=transform)\n",
-    "    # access uploaded files as inputs for the pipeline\n",
-    "    input_artifacts = ln.Artifact.filter(key__startswith=\"fastq/perturbseq\").all()\n",
-    "    input_paths = [artifact.cache() for artifact in input_artifacts]\n",
-    "    # register output files\n",
-    "    output_artifacts = ln.Artifact.from_dir(\n",
-    "        \"./mydata/perturbseq/filtered_feature_bc_matrix/\"\n",
-    "    )\n",
-    "    ln.save(output_artifacts)\n",
+    "# def mock_scrna_analysis_pipeline():\n",
+    "#     ln.setup.login(\"testuser2\")\n",
+    "#     transform = ln.Transform(name=\"Cell Ranger\", version=\"7.2.0\", type=\"pipeline\")\n",
+    "#     ln.track(transform=transform)\n",
+    "#     # access uploaded files as inputs for the pipeline\n",
+    "#     input_artifacts = ln.Artifact.filter(key__startswith=\"fastq/perturbseq\").all()\n",
+    "#     input_paths = [artifact.cache() for artifact in input_artifacts]\n",
+    "#     # register output files\n",
+    "#     output_artifacts = ln.Artifact.from_dir(\n",
+    "#         \"./mydata/perturbseq/filtered_feature_bc_matrix/\"\n",
+    "#     )\n",
+    "#     ln.save(output_artifacts)\n",
     "\n",
-    "    # Post-process these 3 files\n",
-    "    transform = ln.Transform(\n",
-    "        name=\"Postprocess Cell Ranger\", version=\"2.0\", type=\"pipeline\"\n",
-    "    )\n",
-    "    ln.track(transform=transform)\n",
-    "    input_artifacts = [f.cache() for f in output_artifacts]\n",
-    "    output_path = ln.core.datasets.schmidt22_perturbseq(basedir=ln.settings.storage)\n",
-    "    output_file = ln.Artifact(output_path, description=\"perturbseq counts\")\n",
-    "    output_file.save()\n",
+    "#     # Post-process these 3 files\n",
+    "#     transform = ln.Transform(\n",
+    "#         name=\"Postprocess Cell Ranger\", version=\"2.0\", type=\"pipeline\"\n",
+    "#     )\n",
+    "#     ln.track(transform=transform)\n",
+    "#     input_artifacts = [f.cache() for f in output_artifacts]\n",
+    "#     output_path = ln.core.datasets.schmidt22_perturbseq(basedir=ln.settings.storage)\n",
+    "#     output_file = ln.Artifact(output_path, description=\"perturbseq counts\")\n",
+    "#     output_file.save()\n",
     "\n",
     "\n",
-    "mock_scrna_analysis_pipeline()"
+    "# mock_scrna_analysis_pipeline()"
    ]
   },
   {
@@ -343,10 +372,13 @@
    },
    "outputs": [],
    "source": [
+    "# This function mimics the integrated analysis notebook\n",
+    "# In reality, you would run this in a notebook titled \"Perform single cell analysis, integrate with CRISPRa screen\"\n",
     "def mock_integrated_analysis_notebook():\n",
     "    import scanpy as sc\n",
     "\n",
-    "    # create a new transform to mimic a new notebook (in reality you just run ln.track() in a notebook)\n",
+    "    # Create a new transform to mimic a new notebook\n",
+    "    # In reality you just run ln.track() in a notebook\n",
     "    transform = ln.Transform(\n",
     "        name=\"Perform single cell analysis, integrate with CRISPRa screen\",\n",
     "        type=\"notebook\",\n",
