--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sequencer upload ![](https://img.shields.io/badge/pipeline-444444)"
+    "### Sequencer upload ![](https://img.shields.io/badge/script-444444)"
    ]
   },
   {
@@ -233,31 +233,6 @@
    "outputs": [],
    "source": [
     "!python project-flow-scripts/chromium_10x_upload.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# def mock_upload_from_sequencer_pipeline():\n",
-    "#     ln.setup.login(\"testuser1\")\n",
-    "\n",
-    "#     # create a pipeline transform\n",
-    "#     ln.track(transform=ln.Transform(name=\"Chromium 10x upload\", type=\"pipeline\"))\n",
-    "#     # register output files of the sequencer\n",
-    "#     upload_dir = ln.core.datasets.dir_scrnaseq_cellranger(\n",
-    "#         \"perturbseq\", basedir=ln.settings.storage, output_only=False\n",
-    "#     )\n",
-    "#     ln.Artifact(upload_dir.parent / \"fastq/perturbseq_R1_001.fastq.gz\").save()\n",
-    "#     ln.Artifact(upload_dir.parent / \"fastq/perturbseq_R2_001.fastq.gz\").save()\n",
-    "\n",
-    "# mock_upload_from_sequencer_pipeline()"
    ]
   },
   {
@@ -282,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python project-flow-scripts/register_cellranger_io.py"
+    "!python project-flow-scripts/cellranger.py"
    ]
   },
   {
@@ -292,43 +267,6 @@
    "outputs": [],
    "source": [
     "!python project-flow-scripts/postprocess_cellranger.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# def mock_scrna_analysis_pipeline():\n",
-    "#     ln.setup.login(\"testuser2\")\n",
-    "#     transform = ln.Transform(name=\"Cell Ranger\", version=\"7.2.0\", type=\"pipeline\")\n",
-    "#     ln.track(transform=transform)\n",
-    "#     # access uploaded files as inputs for the pipeline\n",
-    "#     input_artifacts = ln.Artifact.filter(key__startswith=\"fastq/perturbseq\").all()\n",
-    "#     input_paths = [artifact.cache() for artifact in input_artifacts]\n",
-    "#     # register output files\n",
-    "#     output_artifacts = ln.Artifact.from_dir(\n",
-    "#         \"./mydata/perturbseq/filtered_feature_bc_matrix/\"\n",
-    "#     )\n",
-    "#     ln.save(output_artifacts)\n",
-    "\n",
-    "#     # Post-process these 3 files\n",
-    "#     transform = ln.Transform(\n",
-    "#         name=\"Postprocess Cell Ranger\", version=\"2.0\", type=\"pipeline\"\n",
-    "#     )\n",
-    "#     ln.track(transform=transform)\n",
-    "#     input_artifacts = [f.cache() for f in output_artifacts]\n",
-    "#     output_path = ln.core.datasets.schmidt22_perturbseq(basedir=ln.settings.storage)\n",
-    "#     output_file = ln.Artifact(output_path, description=\"perturbseq counts\")\n",
-    "#     output_file.save()\n",
-    "\n",
-    "\n",
-    "# mock_scrna_analysis_pipeline()"
    ]
   },
   {
@@ -491,7 +429,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform = ln.Transform.search(\"Bird's eye view\", return_queryset=True).first()\n",
+    "transform = ln.Transform.search(\"Project flow\", return_queryset=True).first()\n",
     "transform.parents.df()"
    ]
   },
