📝 Add script links

--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -223,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Upload files from sequencer:"
+    "Upload files from sequencer via script [chromium_10x_upload.py](./project-flow-scripts/chromium_10x_upload.py):"
    ]
   },
   {
@@ -252,12 +252,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[cellranger.py](./project-flow-scripts/cellranger.py)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "!python project-flow-scripts/cellranger.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[postprocess_cellranger.py](./project-flow-scripts/postprocess_cellranger.py)"
    ]
   },
   {
